<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white"
    tools:context="com.example.shubhraj.bookrooms.Floors">

    <LinearLayout
        android:id="@+id/linear_layout_first"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_bed_1"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@color/orange"
                android:text="@string/bed_1" />

            <Button
                android:id="@+id/button_bed_2"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:background="@color/orange"
                android:text="@string/bed_2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_bed_3"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@color/orange"
                android:text="@string/bed_3" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.01"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:layout_weight="0.5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:layout_weight="0.3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_basin"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">
        <ImageView
            android:layout_width="50dp"
            android:src="@drawable/basin"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:text="Floor 1"
            android:id="@+id/floorName"
            android:textAlignment="center"
            android:layout_marginTop="200dp"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_height="30dp" />
        <Button
            android:layout_marginTop="150dp"
            android:layout_width="40dp"
            android:id="@+id/top_button"
            android:background="@drawable/ic_keyboard_arrow_up_black_36dp"
            android:layout_marginLeft="18dp"
            android:layout_height="40dp" />
        <Button
            android:layout_marginBottom="20dp"
            android:id="@+id/down_button"
            android:layout_width="40dp"
            android:background="@drawable/ic_keyboard_arrow_down_black_36dp"
            android:layout_marginLeft="18dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.01"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:layout_weight="0.3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:layout_weight="0.5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_second"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="70dp"
            android:textStyle="italic"
            android:layout_weight="0.7"
            android:text="Bathroom"
            android:textAlignment="center"
            android:textSize="30sp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:id="@+id/button_bed_4"
                android:background="@color/orange"
                android:text="@string/bed_4" />

            <Button
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/button_bed_5"
                android:layout_marginTop="150dp"
                android:background="@color/orange"
                android:text="@string/bed_5" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
